Rework NBT en cours

--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,10 @@
 	<classpathentry kind="src" path="fr"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/Users/Vincent CAHART/Desktop/Dev 1.15.2/spigot.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vincent CAHART/Desktop/SPIGOTS/spigot-1.12.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vincent CAHART/Desktop/SPIGOTS/spigot-1.13.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vincent CAHART/Desktop/SPIGOTS/spigot-1.14.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vincent CAHART/Desktop/spigot-1.11.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Vincent CAHART/Desktop/spigot-1.13.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
